--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,9 @@ bind - split-window -v
 unbind r
 bind r source-file ~/.tmux.conf
 
+unbind c
+bind c new-window -c "#{pane_current_path}"
+
 bind j resize-pane -D 5
 bind k resize-pane -U 5
 bind l resize-pane -R 5
@@ -26,11 +29,12 @@ setw -g pane-base-index 1
 
 bind -r m resize-pane -Z
 
-set -g mouse on
+set -g mouse off
 
 set-window-option -g mode-keys vi
-
-# bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 
 # bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
@@ -46,11 +50,11 @@ set -g @plugin 'tmux-plugins/tpm'
 # list of tmux plugins
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-# set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
-# set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
+set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
+set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 
-# set -g @resurrect-capture-pane-contents 'on'
-# set -g @continuum-restore 'on'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
