feat: raycast config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,6 +26,7 @@ bind h resize-pane -L 5
 
 set -g base-index 1
 setw -g pane-base-index 1
+set -g status-position bottom
 
 bind -r m resize-pane -Z
 
