--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,12 @@
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
-set -g status-style 'bg=#333333 fg=#5eacd3'
+# set -g status-style 'bg=#333333 fg=#5eacd3'
+
+set -g status-style 'fg=color8 bg=default'
+set -g status-left-style 'fg=color8 dim'
+setw -g window-status-current-style 'fg=colour1 bg=default bold'
+setw -g window-status-style 'fg=color8 dim'
 
 set -g prefix C-a
 unbind C-b
