feat: cmd remaps

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,8 @@ set -g status-left-style 'fg=color8 dim'
 setw -g window-status-current-style 'fg=colour1 bg=default bold'
 setw -g window-status-style 'fg=color8 dim'
 
+set -g xterm-keys on
+
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
